<resources>
    <string name="app_name">Game Name</string>
    <string name="title_home">HOME</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_leaderboard">LEADERBOARD</string>
    <string name="title_random">RANDOM FACT</string>
    <string name="title_dev">DEVELOPERS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="question">Question</string>
    <string name="categories">Categories</string>
    <string name="game_name">GAME NAME</string>
    <string name="replay">Replay</string>
    <string name="achievements">Achievements</string>
    <string name="score">Score</string>
    <string name="final_score">FINAL SCORE</string>
    <string name="category">Category</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="register">REGISTER</string>
    <string name="sign_in_instead">Sign In instead</string>
    <string name="avatar_url_1">https://vignette.wikia.nocookie.net/angry-birds-epic-fanon/images/f/fd/212px-AB_Epic_Avatar_Image_1.png/revision/latest?cb=20150110074525</string>
    <string name="avatar_url_2">https://vignette.wikia.nocookie.net/angry-birds-epic-fanon/images/4/45/177px-AB_Epic_Avatar_Image_3.png/revision/latest?cb=20150314093014</string>
    <string name="avatar_url_3">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVCdo0Ck-v38cziOSMRVVhpXb2AUsF_EBSXPTYv3W2Zyv8mfJi</string>
    <string name="avatar_url_4">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQSVB6DvVjeTQxtDHtBAVQ6_wG4qA7_JPcC3sxJz25f3tWNo6r</string>
    <string name="avatar_url_5">https://vignette.wikia.nocookie.net/angry-birds-epic-fanon/images/f/fd/212px-AB_Epic_Avatar_Image_1.png/revision/latest?cb=20150110074525</string>
    <string name="avatar_url_6">https://vignette.wikia.nocookie.net/angry-birds-epic-fanon/images/4/45/177px-AB_Epic_Avatar_Image_3.png/revision/latest?cb=20150314093014</string>
    <string name="avatar_url_7">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVCdo0Ck-v38cziOSMRVVhpXb2AUsF_EBSXPTYv3W2Zyv8mfJi</string>
    <string name="avatar_url_8">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQSVB6DvVjeTQxtDHtBAVQ6_wG4qA7_JPcC3sxJz25f3tWNo6r</string>

</resources>
