<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_profile"/>

    <item
            android:id="@+id/navigation_leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/title_leaderboard"/>

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home"/>
    <item
            android:id="@+id/navigation_random"
            android:icon="@drawable/ic_random"
            android:title="@string/title_random"/>

    <item
            android:id="@+id/navigation_developers"
            android:icon="@drawable/ic_dev"
            android:title="@string/title_dev"/>



</menu>
