<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:id="@+id/ProgressBarMainQuiz"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/margin_16"/>

    <TextView
        android:id="@+id/TextViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:text="@string/question"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ProgressBarMainQuiz" />

    <TextView
        android:id="@+id/Option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="236dp"
        android:padding="8dp"
        android:text="@string/option_1"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/Option2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/Option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:layout_marginBottom="357dp"
        android:padding="8dp"
        android:text="@string/option_2"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/Option3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Option1" />

    <TextView
        android:id="@+id/Option3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/margin_16"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="358dp"
        android:padding="8dp"
        android:text="@string/option_3"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/Option4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Option2" />

    <TextView
        android:id="@+id/Option4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:padding="8dp"
        android:text="@string/option_4"
        android:textAlignment="viewStart"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Option3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/Option1"
        app:layout_constraintGuide_end="436dp"
        app:layout_constraintTop_toBottomOf="@id/TextViewQuestion" />

</android.support.constraint.ConstraintLayout>